No page scroll and fixed footer overlap on low res screens

--- a/src/components/footer/styles.scss
+++ b/src/components/footer/styles.scss
@@ -18,7 +18,8 @@
 
 @media (max-height: 900px) {
     .footer-container {
-        padding-top: 1rem;
+        padding: 3rem 1rem;
+        bottom: 0;
     }
 }
 
