--- a/src/containers/departureBoard/styles.scss
+++ b/src/containers/departureBoard/styles.scss
@@ -2,12 +2,14 @@
 
 .departure-board {
     width: 100%;
-    max-height: 620px;
+    height: 85%;
 }
 
 .departure-tiles {
     display: flex;
     overflow: auto;
+    height: 94%;
+    max-height: 620px;
 }
 
 .departure-tiles::-webkit-scrollbar {
